Correctly added in "style:{{ whiteSpace: 'pre-line }}" to the Experience.jsx file to add breakpoints within the site. To do this you hit return within the file wherever you want the breakpoint added.

--- a/src/assets/scss/main/_style.scss
+++ b/src/assets/scss/main/_style.scss
@@ -43,6 +43,9 @@ Version: 1.0
 
 /*** Miscellaneous ***/
 
+.css-fix {
+  white-space: pre-wrap; /* or pre-line */
+}
 html {
   overflow-x: hidden;
   height: 100%;
@@ -490,7 +493,7 @@ body.light .header ul.icon-menu li.icon-box:hover i {
 /*** Navigation ***/
 .home-details-container {
   @media (max-width: 991px) {
-    height: 60vh;
+    height: 80vh;
   }
 }
 .header {
